--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,26 @@ h6 {
 }
 
 /*--------------------*/
+.wrapper {
+  padding: 30px;
+  min-height: 100%;
+}
+
+.title {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.image-slider {
+  padding: 50px 0;
+}
+
+.image-slider__img {
+  text-align: center;
+}
+
+.image-slider__img img {
+  width: 80%;
+  height: 500px;
+}
