--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,3 +74,36 @@ h6 {
     font-weight: 400;
 }
 /*--------------------*/
+
+.wrapper {
+    padding: 30px;
+    min-height: 100%;
+}
+.title {
+    font-size: 30px;
+    font-weight: 700;
+    // color: white;
+    margin-bottom: 30px;
+}
+.image-slider {
+    padding: 50px 0;
+    &__wrapper {
+    }
+
+    &__slide {
+    }
+
+    &__img {
+        text-align: center;
+        & img {
+            width: 80%;
+            height: 500px;
+        }
+    }
+}
+.swiper-container {
+}
+.swiper-wrapper {
+}
+.swiper-slide {
+}
