--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,10 @@ h6 {
   color: white;
   font-size: 50px;
 }
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  background-color: black;
+}
