--- a/css/style.css
+++ b/css/style.css
@@ -105,14 +105,13 @@ h6 {
 
 .image-slider__img {
   text-align: center;
-  max-width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  width: 100%;
+  height: 600px;
 }
 
 .swiper-container {
   width: 1200px;
-  height: 700px;
+  height: auto;
 }
 
 .swiper-button-prev,
@@ -125,5 +124,9 @@ h6 {
   width: 20px;
   height: 20px;
   line-height: 20px;
-  background-color: black;
+  background-color: #9b9494;
+}
+
+.swiper-pagination-fraction {
+  font-size: 20px;
 }
