--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,15 +94,15 @@ h6 {
 
     &__img {
         text-align: center;
-        max-width: 100%;
-        object-fit: cover;
+        width: 100%;
+        height: 600px;
     }
 }
 
 // ОБЯЗАТЕЛЬНО НУЖНО УКАЗЫВАТЬ РАЗМЕР КОНТЕЙНЕРА БЕЗ ЭТОГО БУДЕТ БЕЛИБЕРДА
 .swiper-container {
     width: 1200px;
-    height: 700px;
+    height: auto;
 }
 
 // По умолчанию стоят иконочные шрифты, можно менять цвет и размер шрифта
@@ -118,7 +118,10 @@ h6 {
     width: 20px;
     height: 20px;
     line-height: 20px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(155, 148, 148);
+}
+.swiper-pagination-fraction {
+    font-size: 20px;
 }
 .swiper-scrollbar {
 }
