--- a/css/style.css
+++ b/css/style.css
@@ -143,5 +143,5 @@ h6 {
 .swiper-scrollbar-drag {
   cursor: pointer;
   height: 10px;
-  background-color: #f6faf7;
+  background-color: #b46b49;
 }
