--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,7 @@ h6 {
 
 .wrapper {
     padding: 30px;
+    background-color: rgb(129, 126, 126);
 }
 .title {
     font-size: 30px;
@@ -85,7 +86,9 @@ h6 {
     margin-bottom: 30px;
 }
 .image-slider {
-    padding: 50px 0;
+    // ОБЯЗАТЕЛЬНО НУЖНО УКАЗЫВАТЬ РАЗМЕР КОНТЕЙНЕРА БЕЗ ЭТОГО БУДЕТ БЕЛИБЕРДА
+    max-width: 1200px;
+    margin-bottom: 30px;
     &__wrapper {
     }
 
@@ -95,13 +98,8 @@ h6 {
     &__img {
         text-align: center;
         width: 100%;
-        height: 400px;
+        height: 500px;
     }
-}
-
-// ОБЯЗАТЕЛЬНО НУЖНО УКАЗЫВАТЬ РАЗМЕР КОНТЕЙНЕРА БЕЗ ЭТОГО БУДЕТ БЕЛИБЕРДА
-.swiper-container {
-    max-width: 1200px;
 }
 
 // По умолчанию стоят иконочные шрифты, можно менять цвет и размер шрифта
@@ -129,4 +127,62 @@ h6 {
 .swiper-scrollbar-drag {
     cursor: pointer;
     background-color: rgb(180, 107, 73);
+}
+
+.image-mini-slider {
+    width: 1200px;
+    height: 100px;
+    &__wrapper {
+    }
+
+    &__slide {
+        opacity: 0.2;
+        transition: opacity 0.3s;
+        &.swiper-slide-thumb-active {
+            opacity: 1;
+        }
+    }
+
+    &__img {
+        width: 100%;
+        height: 100px;
+        cursor: pointer;
+    }
+}
+
+.image-in-slider {
+    height: 450px;
+    &__wrapper {
+    }
+
+    &__slide {
+        height: 450px;
+    }
+
+    &__img {
+        width: 100%;
+    }
+}
+
+.text {
+    font-size: 25px;
+    line-height: 150%;
+    color: white;
+    margin: 50px 0;
+    background-color: rgb(53, 67, 131);
+    padding: 10px;
+}
+
+.text-slider {
+    &__wrapper {
+        font-size: 25px;
+        line-height: 150%;
+        color: white;
+    }
+
+    &__slide {
+        font-size: 40px;
+        font-weight: 700;
+        margin-bottom: 15px;
+    }
 }
